--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -30,3 +30,10 @@ jobs:
           sudo apt-get install -y xvfb
           xvfb-run --auto-servernum --server-args='-screen 0 1280x1024x24' npx playwright test
 
+      - name: Upload Playwright Videos
+        uses: actions/upload-artifact@v3
+        with:
+          name: test-videos
+          path: test-results/**/*.webm
+
+
