--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -5,6 +5,7 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
+  workflow_dispatch:  # 👈 allows manual trigger from Actions tab
 
 jobs:
   test:
@@ -31,9 +32,10 @@ jobs:
           xvfb-run --auto-servernum --server-args='-screen 0 1280x1024x24' npx playwright test
 
       - name: Upload Playwright Videos
-        uses: actions/upload-artifact@v3.1.2
+        uses: actions/upload-artifact@v3
         with:
           name: test-videos
           path: test-results/**/*.webm
+
 
 
