--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,6 +1,7 @@
 name: Run Playwright Tests (Headed Mode in CI)
 
 on:
+  workflow_dispatch:  # Allows you to run it manually from GitHub UI
   push:
     branches: [ main ]
   pull_request:
@@ -30,3 +31,8 @@ jobs:
           sudo apt-get install -y xvfb
           xvfb-run --auto-servernum --server-args='-screen 0 1280x1024x24' npx playwright test
 
+      - name: Upload Playwright Videos
+        uses: actions/upload-artifact@v3
+        with:
+          name: test-videos
+          path: test-results/**/*.webm
